@@ -2,7 +2,7 @@ sg3-utils (1.27-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Tue, 25 Nov 2008 15:30:00 -0500
+ -- Doug Gilbert <dgilbert@interlog.com>  Sat, 29 Nov 2008 18:50:00 -0500
 
 sg3-utils (1.26-0.1) unstable; urgency=low
 
